# fileEditor

./: 1.docx  CMakeLists.txt  FindReplaceDialog.h  README.md  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h
icons/: file.py
report/: report.html
